--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,16 +5,14 @@ build-backend = "hatchling.build"
 [project]
 name = "example_package_sp"
 version = "0.0.1"
-authors = [
-  { name="Example Author", email="author@example.com" },
-]
+authors = [{ name = "Example Author", email = "author@example.com" }]
 description = "A small example package"
 readme = "README.md"
 requires-python = ">=3.8"
 classifiers = [
-    "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
-    "Operating System :: OS Independent",
+  "Programming Language :: Python :: 3",
+  "License :: OSI Approved :: MIT License",
+  "Operating System :: OS Independent",
 ]
 
 [project.urls]
