--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,11 @@ annotated-types==0.7.0
 anyio==4.4.0
 appnope==0.1.4
 asgiref==3.8.1
+astroid==3.2.2
 asttokens==2.4.1
 async-timeout==4.0.3
 attrs==23.2.0
+Babel==2.15.0
 backoff==2.2.1
 bcrypt==4.1.3
 beautifulsoup4==4.12.3
@@ -18,6 +20,7 @@ charset-normalizer==3.3.2
 chroma-hnswlib==0.7.3
 chromadb==0.5.0
 click==8.1.7
+colorama==0.4.6
 coloredlogs==15.0.1
 comm==0.2.2
 dataclasses-json==0.6.7
@@ -25,21 +28,28 @@ debugpy==1.8.1
 decorator==5.1.1
 deepdiff==7.0.1
 Deprecated==1.2.14
+dill==0.3.8
 distro==1.9.0
 dnspython==2.6.1
 email_validator==2.1.2
 emoji==2.12.1
 exceptiongroup==1.2.1
 executing==2.0.1
+faiss-gpu==1.7.2
 fastapi==0.111.0
 fastapi-cli==0.0.4
 filelock==3.15.1
 filetype==1.2.0
+flake8==7.1.0
+flake8-docstrings==1.7.0
 flatbuffers==24.3.25
 frozenlist==1.4.1
 fsspec==2024.6.0
+ghp-import==2.1.0
 google-auth==2.30.0
 googleapis-common-protos==1.63.1
+greenlet==3.0.3
+griffe==0.47.0
 grpcio==1.64.1
 h11==0.14.0
 httpcore==1.0.5
@@ -50,6 +60,7 @@ humanfriendly==10.0
 idna==3.7
 importlib_metadata==7.1.0
 importlib_resources==6.4.0
+iniconfig==2.0.0
 ipykernel==6.29.4
 ipython==8.25.0
 isort==5.13.2
@@ -70,21 +81,47 @@ langchain-openai==0.1.8
 langchain-text-splitters==0.2.1
 langdetect==1.0.9
 langsmith==0.1.77
+libcst==1.4.0
 lxml==5.2.2
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 marshmallow==3.21.3
 matplotlib-inline==0.1.7
+mccabe==0.7.0
 mdurl==0.1.2
+mergedeep==1.3.4
+mkdocs==1.6.0
+mkdocs-autorefs==1.0.1
+mkdocs-get-deps==0.2.0
+mkdocs-material==9.5.27
+mkdocs-material-extensions==1.3.1
+mkdocstrings==0.25.1
+mkdocstrings-python==1.10.5
 mmh3==4.1.0
+MonkeyType==23.3.0
 monotonic==1.6
 mpmath==1.3.0
 multidict==6.0.5
+multiprocess==0.70.16
+mypy==1.10.0
 mypy-extensions==1.0.0
 nest-asyncio==1.6.0
 networkx==3.3
 nltk==3.8.1
+nose==1.3.7
 numpy==1.26.4
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.20.5
+nvidia-nvjitlink-cu12==12.5.40
+nvidia-nvtx-cu12==12.1.105
 oauthlib==3.2.2
 onnxruntime==1.18.0
 openai==1.34.0
@@ -102,10 +139,13 @@ ordered-set==4.1.0
 orjson==3.10.5
 overrides==7.7.0
 packaging==24.1
+paginate==0.5.6
 parso==0.8.4
+pathspec==0.12.1
 pexpect==4.9.0
 pillow==10.3.0
 platformdirs==4.2.2
+pluggy==1.5.0
 posthog==3.5.0
 prompt_toolkit==3.0.47
 protobuf==4.25.3
@@ -115,18 +155,24 @@ pudb==2024.1
 pure-eval==0.2.2
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
+pycodestyle==2.12.0
 pydantic==2.7.4
 pydantic_core==2.18.4
+pydocstyle==6.3.0
+pyflakes==3.2.0
 Pygments==2.18.0
+pylint==3.2.3
 pypdf==4.2.0
 PyPika==0.48.9
 pyproject_hooks==1.1.0
+pytest==8.2.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-iso639==2024.4.27
 python-magic==0.4.27
 python-multipart==0.0.9
 PyYAML==6.0.1
+pyyaml_env_tag==0.1
 pyzmq==26.0.3
 rapidfuzz==3.9.3
 regex==2024.5.15
@@ -142,7 +188,9 @@ sentence-transformers==3.0.1
 shellingham==1.5.4
 six==1.16.0
 smart-open==7.0.4
+snakeviz==2.2.0
 sniffio==1.3.1
+snowballstemmer==2.2.0
 soupsieve==2.5
 SQLAlchemy==2.0.30
 stack-data==0.6.3
@@ -154,11 +202,13 @@ threadpoolctl==3.5.0
 tiktoken==0.7.0
 tokenizers==0.19.1
 tomli==2.0.1
+tomlkit==0.12.5
 torch==2.3.1
 tornado==6.4.1
 tqdm==4.66.4
 traitlets==5.14.3
 transformers==4.41.2
+triton==2.3.1
 typer==0.12.3
 typing-inspect==0.9.0
 typing_extensions==4.12.2
@@ -170,6 +220,7 @@ urwid==2.6.14
 urwid_readline==0.14
 uvicorn==0.30.1
 uvloop==0.19.0
+watchdog==4.0.1
 watchfiles==0.22.0
 wcwidth==0.2.13
 websocket-client==1.8.0
